--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,8 @@ python-crontab = "3.2.0"
 wallycore = {version = "1.3.0", optional = true}
 # needed for breez funding source
 breez-sdk = {version = "0.5.2", optional = true}
+# needed for public key verification
+# bitcoinlib = "^0.6.15"
 
 [tool.poetry.extras]
 breez = ["breez-sdk"]
